0.765_11 (11.07.2007) - John Siracusa <siracusa@gmail.com>

    * Fiddled with not_found() detection.  (Changes suggested by Philip Dye)
    * Made one-to-one relationships (attempt to) work even when uniqueness is 
      not apparent in the metadata.
    * Added the unique_key_by_name() metadata method.
    * Added the ability to do unrestricted joins in some circumstances.
    * The key_column() method in the ForeignKey class now works correctly.
      (Patch by Christopher Masto)
    * Further synced datetime and timestamp method maker code.
    * Added a test suite exclusion for DBD::SQLite 1.14, which still suffers 
      from this bug: http://rt.cpan.org/Public/Bug/Display.html?id=21472
    * Fixed propagation of db objects in update and delete Manager methods.
    * Fixed a bug that caused some caches SQL to persist incorrectly after
      inheritance.  (Patch by Daniel Koch)
    * Setting undef integer attributes to zero is now correctly detected 
      as a modification.

0.765 (07.21.2007) - John Siracusa <siracusa@gmail.com>

    * Added a value_type attribute to SET columns.
    * Added a normalize_get_objects_args() utility method to make
      custom Manager methods less cumbersome to implement.
    * Setting a BigInt column to undef no longer sets it to zero.
      (Reported by Jeffrey Horn)
    * Corrected error propagation in many-to-many "find" methods when bad
      arguments are passed.  (Reported by Michael Reece)
    * Added "use strict" the output of perl_manager_class().
    * Restored default use of table aliases in Manager queries.  The new
      table_aliases parameter can be used to alter the behavior.
    * Added support for literal sort_by parameters using scalar references.
    * Added is/is_not comparison operators to QueryBuilder.  (Suggested by
      Jonathan Vanasco)
    * Scalar references appearing in the select => ... list in Manager calls
      are now passed through unmodified.